# paprwall

./: .env.example  .gitattributes  .gitguardian.yaml  .gitignore  API_KEYS_SECURITY.md  CHANGELOG.md  CONTRIBUTING.md  DEV_README.md  DISTRIBUTION.md  INSTALL.md  INSTALLATION.md  INSTALL_GUIDE.md  MANIFEST.in  PROJECT.md  PYPI_PUBLISHING.md  PYPI_QUICKSTART.md  PaprWall-1.0.4-x86_64.AppImage.sha256  README.md  READY_TO_SHIP.md  RELEASE-NOTES-v1.0.0.md  RELEASE_v1.1.0.txt  SECURITY.md  SHIPMENT_CHECKLIST.md  TROUBLESHOOTING.md  Wiki.md  build.sh  build_binaries.sh  build_binary.sh  build_gui.sh  build_release.sh  build_release_windows.bat  build_rpm.sh  build_windows_installer.sh  install-single.sh  install.sh  new_setup_ui.py  paprwall-1.0.2-1.x86_64.rpm.txt  paprwall-gui.spec  paprwall-setup-1.0.2-win64.exe.txt  paprwall-v1.0.0-linux-x64.tar.gz.sha256  (+20 more)
.github/: markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  pr.yml  release.yml
assets/: paprwall.desktop.template  paprwall.service.template
docs/: development.md  installation.md  themes.md
packaging/deb/paprwall-1.0.2/DEBIAN/: control  postinst
packaging/deb/paprwall-1.0.2/usr/share/applications/: paprwall.desktop
packaging/rpm/SPECS/: paprwall.spec
packaging/windows/: paprwall-installer.nsi
paprwall/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
paprwall/.github/workflows/: ci.yml  publish.yml
paprwall/docs/: contributing.md  installation.md  usage.md
paprwall/src/paprwall/: __main__.py  installer.py
paprwall/tests/: test_wallpaper_manager.py
release-appimage-v1.0.4/: README.md
release-v1.0.0/: CHANGELOG.md  INSTALL.sh  LICENSE  README.md
release-v1.0.2/: INSTALL.sh  README.md  uninstall.sh
scripts/: build_appimage.sh  build_linux.sh  build_windows.bat  paprwall.spec  setup_ubuntu.sh
src/paprwall/: __init__.py  __main__.py  __version__.py  cli.py  core.py  installer.py  post_install.py  service.py  tray.py  wallpaper_cli.py
src/paprwall/api/: base_client.py  pexels_client.py  pixabay_client.py  source_manager.py  unsplash_client.py
src/paprwall/config/: config_manager.py  default_keys.py
src/paprwall/core/: attribution.py  fetcher.py  local_images.py  wallpaper_setter.py
src/paprwall/gui/: __init__.py  main_window.py  wallpaper_manager_gui.py  wallpaper_manager_gui.py.backup
src/paprwall/service/: autostart.py  daemon.py  scheduler.py
src/paprwall/utils/: logger.py
src/riturajprofile_wallpaper/: __init__.py  __main__.py  cli.py
src/riturajprofile_wallpaper/api/: __init__.py  base_client.py  pexels_client.py  pixabay_client.py  source_manager.py  unsplash_client.py
src/riturajprofile_wallpaper/config/: config_manager.py  default_keys.py  schemas.py
src/riturajprofile_wallpaper/core/: attribution.py  fetcher.py  local_images.py  rotator.py  wallpaper_setter.py
src/riturajprofile_wallpaper/gui/: main_window.py  main_window.py.old
src/riturajprofile_wallpaper/service/: __init__.py  autostart.py  daemon.py  scheduler.py
src/riturajprofile_wallpaper/utils/: logger.py
systemd/: riturajprofile-wallpaper.service
tests/: __init__.py  test_cli.py  test_core.py
