[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paprwall"
version = "1.0.2"
description = "Modern Desktop Wallpaper Manager with Motivational Quotes"
authors = [{name = "riturajprofile", email = "riturajprofile@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "wallpaper", 
    "desktop", 
    "background", 
    "quotes", 
    "motivation", 
    "linux", 
    "gnome", 
    "kde", 
    "xfce",
    "gui",
    "tkinter"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
]

dependencies = [
    "requests>=2.28.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/riturajprofile/paprwall"
Documentation = "https://github.com/riturajprofile/paprwall#readme"
Repository = "https://github.com/riturajprofile/paprwall"
"Bug Tracker" = "https://github.com/riturajprofile/paprwall/issues"
Changelog = "https://github.com/riturajprofile/paprwall/blob/main/CHANGELOG.md"

[project.gui-scripts]
paprwall-gui = "paprwall.gui.wallpaper_manager_gui:main"

[tool.setuptools]
packages = ["paprwall", "paprwall.gui"]

[tool.setuptools.package-dir]
"" = "src"
