[metadata]
name = paprwall
version = 1.0.0
author = riturajprofile
author_email = riturajprofile.me@gmail.com
description = Auto-rotating wallpaper app for Linux with multi-source support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riturajprofile/paprwall
project_urls =
    Bug Tracker = https://github.com/riturajprofile/paprwall/issues
    Documentation = https://github.com/riturajprofile/paprwall/wiki
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Desktop Environment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    Pillow>=10.0.0
    APScheduler>=3.10.0
    PyGObject>=3.42.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    paprwall = riturajprofile_wallpaper.cli:main
gui_scripts =
    paprwall-gui = riturajprofile_wallpaper.gui.main_window:main
