[metadata]
name = paprwall
version = 0.1.0
description = A modern desktop wallpaper manager with motivational quotes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/paprwall
license = CC BY-NC 4.0
classifiers =
    Programming Language :: Python :: 3
    License :: Free for non-commercial use
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Topic :: Desktop Environment
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    Pillow
    requests

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    flake8
    mypy

[options.entry_points]
console_scripts =
    paprwall = paprwall.__main__:main

[options.package_data]
* = *.png, *.md, *.json
